add timer module and update code

--- a/resources/home.html
+++ b/resources/home.html
@@ -7,7 +7,9 @@
     <title>首页</title>
     <style>
         body {
-            background-color: #f0f0f0; /* 设置整个页面的背景颜色 */
+            background-image: url(./img/home_bg.png);
+            background-size: cover; /* 控制背景图片的尺寸 */
+            background-position: top; /* 控制背景图片的位置 */~
             font-family: Arial, sans-serif; /* 设置字体 */
         }
         
