--- a/resources/welcome.html
+++ b/resources/welcome.html
@@ -3,12 +3,12 @@
 
 <head>
      <meta charset="UTF-8">
-     <title>登录</title>
+     <title>登录成功</title>
 </head>
 
 <body>
 
-     <h1>这是登录界面~~~</h1>
+     <h1>你已经成功登录啦~~~</h1>
      
 </body>
 
