update web-html gui

--- a/resources/success.html
+++ b/resources/success.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>错误</title>
+    <title>注册成功</title>
 
     <style>
         /* 添加导航栏样式 */
@@ -56,12 +56,12 @@
         <!-- 添加其他导航链接 -->
     </div>
 
-    <h2>您填入的信息有误，请重试~~~</h2>
+    <h2>您已经注册成功，请尝试重试登录~~~</h2>
 
     <script>
         setTimeout(function () {
-            window.location.href = 'login.html';        // 2秒后跳转到 login.html
-        }, 2000);                                       // 2000毫秒
+            window.location.href = 'login.html';            // 2秒后跳转到 login.html
+        }, 2000);                                           // 2000毫秒   
     </script>
      
 </body>
